<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">KT Browser</string>
    <string name="action_new_tab">Thẻ mới</string>
    <string name="action_share">Chia sẻ</string>
    <string name="action_history">Lịch sử</string>
    <string name="action_bookmarks">Dấu trang</string>
    <string name="action_add_bookmark">Thêm dấu trang</string>
    <string name="action_copy">Chép địa chỉ</string>
    <string name="action_forward">Lùi về</string>
    <string name="settings">Cài đặt</string>
    <string name="location">Truy cập định vị</string>
    <string name="password">Lưu mật khẩu</string>
    <string name="agent">User Agent</string>
    <string name="flash">Bật Adobe Flash</string>
    <string name="home">Trang chủ</string>
    <string name="fullscreen">Chế độ toàn màn hình</string>
    <string name="java">Bật JavaScript</string>
    <string name="download">Đường dẫn tải về</string>
    <string name="settings_advanced">Cài đặt nâng cao</string>
    <string name="apache">Apache License 2.0</string>
    <string name="version">Phiên bản phần mềm</string>
    <string name="cache">Xoá bộ nhớ đệm khi thoát</string>
    <string name="reflow">Bật text reflow</string>
    <string name="block">Chặn ảnh</string>
    <string name="window">Cho phép các trang mở cửa sổ mới</string>
    <string name="cookies">Bật Cookies</string>
    <string name="importbookmarks">Nhập dấu trang từ trình duyệt</string>
    <string name="size">Cỡ chữ</string>
    <string name="recommended">Đề xuất</string>
    <string name="search">Máy tìm kiếm</string>
    <string name="search_hint">Tìm kiếm</string>
    <string name="wideViewPort">Cho phép khung nhìn rộng</string>
    <string name="overViewMode">Tải trang trong chế độ tổng quan</string>
    <string name="restore">Khôi phục các tab khi khởi động</string>
    <string name="supported_browsers_title">Các trình duyệt được hỗ trợ</string>
    <string name="stock_browser">Trình duyệt cài sẵn</string>
    <string name="stock_browser_unavailable">Không có trình duyệt cài sẵn nào được phát hiện</string>
    <string name="stock_browser_available">Phát hiện trình duyệt cài sẵn</string>
    <string name="fullScreenOption">Ẩn thanh trạng thái trong khi duyệt</string>
    <string name="clear_cookies">Xoá Cookies</string>
    <string name="clear_history">Xoá lịch sử</string>
    <string name="dialog_image">Bạn muốn làm gì với ảnh này?</string>
    <string name="action_download">Tải về</string>
    <string name="action_open">Mở</string>
    <string name="dialog_link">Bạn muốn làm gì với đường dẫn này?</string>
    <string name="dialog_title_share">Chia sẻ trang này</string>
    <string name="dialog_history_long_press">Bạn muốn làm gì với mục lịch sử này?</string>
    <string name="dialog_bookmark">Bạn muốn làm gì với dấu trang này?</string>
    <string name="action_delete">Xoá</string>
    <string name="action_blank">Trang trắng</string>
    <string name="agent_default">Mặc định</string>
    <string name="agent_desktop">Máy để bàn</string>
    <string name="agent_mobile">Điện thoại</string>
    <string name="agent_custom">Tuỳ chỉnh</string>
    <string name="title_search_engine">Máy tìm kiếm</string>
    <string name="action_ok">Được rồi</string>
    <string name="dialog_download">Bạn có muốn tải tập tin này không?</string>
    <string name="action_cancel">Huỷ bỏ</string>
    <string name="title_warning">Cảnh báo</string>
    <string name="dialog_adobe_not_installed">Bạn chưa cài đặt Adobe Flash Player.\nVui lòng cài đặt Flash Player.</string>
    <string name="title_user_agent">User Agent</string>
    <string name="title_download_location">Đường dẫn tải về</string>
    <string name="title_custom_homepage">Trang chủ tuỳ chọn</string>
    <string name="action_webpage">Trang web</string>
    <string name="title_clear_history">Xoá lịch sử</string>
    <string name="title_clear_cookies">Xoá cookies</string>
    <string name="dialog_history">Bạn có muốn xoá hết lịch sử không?</string>
    <string name="dialog_cookies">Bạn có muốn xoá hết cookies không?</string>
    <string name="action_yes">Có</string>
    <string name="action_no">Không</string>
    <string name="title_text_size">Cỡ chữ</string>
    <string name="size_largest">Lớn nhất</string>
    <string name="size_large">Lớn</string>
    <string name="size_normal">Bình thường</string>
    <string name="size_small">Nhỏ</string>
    <string name="size_smallest">Nhỏ nhất</string>
    <string name="title_error">Lỗi</string>
    <string name="dialog_import_error">Không trình duyệt nào được phát hiện để nhập dấu trang.</string>
    <string name="hint_title">Tiêu đề</string>
    <string name="hint_url">Địa chỉ</string>
    <string name="title_edit_bookmark">Sửa dấu trang</string>
    <string name="action_edit">Sửa</string>
    <string name="action_incognito">Thẻ ẩn danh mới</string>
    <string name="action_homepage">Mặc định</string>
    <string name="action_back">Lùi về</string>
    <string name="action_find">Tìm trong trang</string>
    <string name="download_pending">Bắt đầu tải về\u2026</string>
    <string name="cannot_download">Chỉ có thể tải tập tin có tiền tố \"http\" hoặc \"https\" trong địa chỉ.</string>
    <string name="problem_download">Địa chỉ không hợp lệ, không thể tải tiếp</string>
    <string name="problem_location_download">Không thể tải vào đường dẫn định sẵn</string>
    <string name="download_no_sdcard_dlg_title">Không có thẻ SD</string>
    <string name="download_no_sdcard_dlg_msg">Cần ổ USB để có thể tải tệp.</string>
    <string name="download_sdcard_busy_dlg_title">Không xác định được ổ USB</string>
    <string name="download_sdcard_busy_dlg_msg">Ổ đĩa đang bận. Để có thể tải về, chạm Turn Off USB Storage trên thanh thông báo.</string>
    <string name="incognito_cookies">Cho phép Cookies trong chế độ ẩn danh</string>
    <string name="title_flash">Adobe Flash</string>
    <string name="action_manual">Bằng tay</string>
    <string name="action_auto">Tự động</string>
    <string name="action_follow_me">Liên hệ</string>
    <string name="url_twitter">fb.com/khoaakt</string>
    <string name="clear_cache">Làm sạch Cache</string>
    <string name="message_cache_cleared">Cache đã được làm sạch</string>
    <string name="message_import">Dấu trang đã được nhập</string>
    <string name="message_clear_history">Lịch sử đã được làm sạch</string>
    <string name="message_cookies_cleared">Cookies đã được làm sạch</string>
    <string name="max_tabs">Giới hạn thẻ đạt được</string>
    <string name="message_text_copied">Đã sao chép văn bản vào clipboard</string>
    <string name="message_link_copied">Đã sao chép liên kết vào clipboard</string>
    <string name="custom_url">URL tùy chỉnh</string>
    <string name="message_blocked_local">Tập tin local đã bị chặn</string>
    <string name="licenses">Giấy phép nguồn mở</string>
    <string name="suggestion">Tìm kiếm cho</string>
    <string name="block_ads">Chặn quảng cáo</string>
    <string name="message_insecure_connection">Kết nối tới trang này không an toàn:\n%1$s\nBỏ qua cảnh báo và tiếp tục?</string>
    <string name="message_certificate_date_invalid">thời gian của chứng chỉ không chính xác</string>
    <string name="message_certificate_expired">chứng chỉ hết hạn</string>
    <string name="message_certificate_domain_mismatch">domain trong chứng chỉ không đúng</string>
    <string name="message_certificate_invalid">chứng chỉ không chính xác</string>
    <string name="message_certificate_not_yet_valid">chứng chỉ chưa hợp lệ</string>
    <string name="message_certificate_untrusted">chứng chỉ không được tin tưởng</string>
    <string name="title_form_resubmission">Gửi lại biểu mẫu</string>
    <string name="message_form_resubmission">Bạn có muốn gửi lại data không?</string>
    <string name="message_location">\nMuốn lấy thông tin vị trí của bạn</string>
    <string name="action_allow">Cho phép</string>
    <string name="action_dont_allow">Không cho phép</string>
    <string name="title_sign_in">Đăng nhập</string>
    <string name="hint_username">Tên đăng nhập</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="search_suggestions">Gợi ý tìm kiếm</string>
    <string name="powered_by_google">Cung cấp bởi Google</string>
    <string name="powered_by_duck">Cung cấp bởi DuckDuckGo</string>
    <string name="search_suggestions_off">Tắt gợi ý tìm kiếm</string>
    <string name="http_proxy">HTTP Proxy</string>
    <string-array name="proxy_choices_array">
        <item>Không có</item>
        <item>Orbot</item>
        <item>I2P</item>
        <item>Bằng tay</item>
    </string-array>
    <string name="manual_proxy">Proxy bằng tay</string>
    <string name="host">Host:</string>
    <string name="port">Port:</string>
    <string name="use_tor_prompt">Có vẻ như bạn đã cài đặt Orbot. Bạn có muốn sử dụng Tor?</string>
    <string name="use_i2p_prompt">Có vẻ như bạn đã cài đặt I2P. Bạn có muốn sử dụng I2P?</string>
    <string name="install_orbot">Vui lòng cài đặt Orbot để proxy với Tor.</string>
    <string name="i2p_not_running">I2P không chạy.</string>
    <string name="i2p_tunnels_not_ready">I2P tunnels chưa sẵn sàng.</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="clear_cookies_exit">Xoá cookies khi thoát</string>
    <string name="clear_history_exit">Xoá lịch sử khi thoát</string>
    <string name="folder_default">Mặc định</string>
    <string name="folder_custom">Tuỳ chỉnh</string>
    <string name="untitled">Không tiêu đề</string>
    <string name="mpl_license">Mozilla Public License v. 2.0</string>
    <string name="freeware">Phần mềm miễn phí</string>
    <string name="android_open_source_project">Android Open Source Project</string>
    <string name="hphosts_ad_server_list">hpHosts Ad Server List</string>
    <string name="deleted_tab">Mở lại tab cũ</string>
    <string name="rendering_mode">Chế độ hiển thị</string>
    <string name="name_inverted">Đảo ngược</string>
    <string name="name_grayscale">Màu xám</string>
    <string name="name_inverted_grayscale">Màu xám đảo ngược</string>
    <string name="name_increase_contrast">Gia tăng độ tương phản</string>
    <string name="name_normal">Bình thường</string>
    <string name="sync_history">Đồng bộ hóa lịch sử với Google</string>
    <string name="title_file_chooser">Trình chọn tệp</string>
    <string name="library_netcipher">NetCipher</string>
    <string name="license_gnu">GNU Lesser General Public License</string>
    <string name="export_bookmarks">Xuất dấu trang để sao lưu</string>
    <string name="import_backup">Nhập dấu trang từ bản sao lưu</string>
    <string name="bookmark_export_path">Dấu trang được xuất sang</string>
    <string name="bookmark_settings">Cài đặt dấu trang</string>
    <string name="import_bookmark_error">Không thể nhập dấu trang từ tập tin</string>
    <string name="title_chooser">Chọn một tập tin</string>
    <string name="settings_general">Cài đặt chung</string>
    <string name="settings_display">Cài đặt hiển thị</string>
    <string name="settings_privacy">Cài đặt bảo mật</string>
    <string name="settings_about">Thông tin</string>
    <string name="settings_about_explain">Thông tin chi tiết về phiên bản, tác giả và giấy phép.</string>
    <string name="close_tab">Đóng tab hiện tại</string>
    <string name="close_all_tabs">Đóng tất cả các tab</string>
    <string name="close_other_tabs">Đóng các tab khác</string>
    <string name="third_party">Chặn cookies từ bên thứ 3</string>
    <string name="color_mode">Cho phép Color Mode</string>
    <string name="reading_mode">Chế độ đọc báo</string>
    <string name="loading">Đang tải&#8230;</string>
    <string name="loading_failed">Không thể nạp bất cứ thứ gì từ trang.</string>
    <string name="folder">Tên thư mục</string>
    <string name="faq">Hỏi đáp</string>
    <string name="faq_description">Các câu hỏi thường gặp</string>
    <string name="debug_title">Cài đặt gỡ lỗi</string>
</resources>